# referrals-rest-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 608c6c350842_initial.py  9ca7d0df1223_add_user_registration.py
deploy/: gunicorn.conf.py
src/: main.py
src/api/: __init__.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  referrals.py  users.py
src/auth/: dependencies.py  schemas.py  service.py
src/core/: config.py  container.py  exceptions.py
src/database/: models.py  session.py
src/features/email/: constants.py  exceptions.py  models.py  services.py
src/features/referrals/: exceptions.py  models.py  schemas.py  services.py
src/features/users/: models.py  schemas.py  services.py
tests/: conftest.py  factories.py
tests/api/: test_docs.py
tests/api/v1/: test_referrals.py  test_users.py
tests/referrals/: test_service.py
tests/users/: test_service.py
