[tool.isort]
profile = "black"
extend_skip_glob = ["alembic/*"]

[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Project structure template"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.19.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.26.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
